# deepseek-sparse-attention-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
configs/: zero2.json
models/: configuration_qwen3_dsa.py  model_loader.py  modeling_qwen3_dsa.py
run/: sft.py
scripts/: sft.sh
training/: train.py
